# plookingII

./: .cz.toml  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.template  .ruff.toml  API_DOCUMENTATION.md  ARCHITECTURE_PROGRESS.md  ARCHITECTURE_SIMPLIFICATION_INDEX.md  ARCHITECTURE_SIMPLIFICATION_PLAN.md  ARCHITECTURE_SIMPLIFICATION_SUMMARY.md  BUILD_FIX_SUMMARY.md  CHANGELOG.md  COMMIT_CODE_QUALITY.txt  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_V2.txt  DEPLOYMENT_GUIDE.md  FINAL_CLEANUP_REPORT.md  FINAL_RELEASE_SUMMARY.md  FIXES_SUMMARY.md  IMAGE_DISPLAY_COMPLETE_FIX.md  IMAGE_DISPLAY_FIX.md  LICENSE  MACOS_CLEANUP_GUIDE.md  Makefile  PERFORMANCE_OPTIMIZATION_FINAL_REPORT.md  PHASE1_SUCCESS.md  PHASE2_COMPLETED.md  PHASE2_LOADING_SIMPLIFICATION.md  PHASE2_SUCCESS.md  PHASE3_COMPLETED.md  PHASE3_MONITOR_SIMPLIFICATION.md  PHASE4_5_6_COMPLETED.md  PHASE4_5_6_PLAN.md  PRODUCTION_READINESS_REPORT.md  QUICK_START_SIMPLIFIED.md  README.md  RELEASE_v1.7.0.md  RELEASE_v1.7.1.md  SECURITY_AUDIT_REPORT.md  (+14 more)
.cursor/rules/: python.mdc
.github/: CI_PLATFORM_REQUIREMENTS.md  CODEOWNERS  REPOSITORY_CONFIG.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_issue.yml
.github/workflows/: ci.yml  docs.yml  pr-check.yml  release.yml  security.yml
.kiro/steering/: core.md  python.md
.tasks/: 2025-09-15_1_batch-photo-lossless-compress.md  2025-09-15_1_improve-image-perf.md  2025-09-15_1_ui-refactor-picview.md  2025-09-18_1_improve-coverage.md
doc/reports/: PROJECT_REPORTS.md
docs/: CACHE_REFACTOR_SUMMARY.md  CI_SETUP_GUIDE.md  CODE_CLEANUP_RECOMMENDATIONS.md  CODE_QUALITY_FINAL_SUMMARY.md  CODE_QUALITY_FIX_SUMMARY.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  CODE_QUALITY_IMPROVEMENT_REPORT.md  COVERAGE_80_PERCENT_PLAN.md  COVERAGE_80_REALISTIC_STRATEGY.md  DOCUMENTATION_GOVERNANCE_REPORT.md  GOVERNANCE_SUMMARY.md  IO_OPTIMIZATION_IMPLEMENTATION.md  LOGGING_FORMAT_FIX_GUIDE.md  PERFORMANCE_OPTIMIZATION_OPPORTUNITIES.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  QUALITY_AUDIT_SUMMARY.md  QUICK_WIN_MODULES.md  README.md  README_PHASE1.md  TECHNICAL_QUALITY_AUDIT_REPORT.md  TEST_COVERAGE_FINAL_REPORT.md  TEST_COVERAGE_FINAL_SUMMARY.md  TEST_COVERAGE_IMPROVEMENT_PLAN.md  TEST_COVERAGE_P1_P3_REPORT.md  TEST_COVERAGE_PLAN_A_FINAL_REPORT.md  TEST_COVERAGE_PROGRESS.md  TEST_COVERAGE_ROADMAP.md  TEST_COVERAGE_SPRINT_FINAL.md  TEST_COVERAGE_UTILS_REPORT.md  VERSION_MANAGEMENT.md  WINDOW_REFACTOR_PLAN.md  conf.py  index.rst
docs/api/: plookingII.rst
docs/architecture/: ARCHITECTURE_ANALYSIS_REPORT.md  ARCHITECTURE_GUARD.md  ARCHITECTURE_REFACTORING_COMPLETION_REPORT.md  ARCHITECTURE_REFACTORING_PLAN.md  CI_CD_ARCHITECTURE_GUARD_COMPLETE.md  README.md  UI_BUSINESS_SEPARATION_PROPOSAL.md
docs/developer/: DEVELOPER_GUIDE.md  IMPROVEMENT_CHECKLIST.md  LOG_CONFIGURATION.md  MAINTENANCE_GUIDELINES.md  QUICK_ACTION_CHECKLIST.md  QUICK_START_CI_CD.md  RELEASE_CHECKLIST.md  SECURITY.md  TECHNICAL_GUIDE.md  UI_STRINGS_GUIDE.md
docs/development/: README.md
docs/fixes/: README.md  image-display-fix.md  ui-dialog-update.md
docs/releases/: README.md  v1.7.1.md  v1.7.2.md
docs/reports/: ARCHITECTURE_REVIEW_REPORT.md  CACHE_REFACTORING_COMPLETE.md  IMAGE_DISPLAY_FIX_REPORT.md  MIGRATION_COMPLETION_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_CLEANUP_PHASE_REPORT.md  PROJECT_CLEANUP_REPORT.md  README.md  TEST_COVERAGE_PROGRESS_REPORT.md  TEST_COVERAGE_REPORT.md  UNIFIED_CONFIG_FIX_REPORT.md  WINDOW_REFACTOR_ASSESSMENT_REPORT.md
plookingII/: __init__.py  __main__.py  __version__.py  imports.py
plookingII/app/: main.py
plookingII/config/: __init__.py  cache_optimization_config.py  constants.py  fun_messages_config.py  image_processing_config.py  manager.py  ui_strings.py
plookingII/core/: __init__.py  base_classes.py  bidirectional_cache.py  cache.py  cache_interface.py  cleanup_utils.py  enhanced_logging.py  error_handling.py  file_info_batch_loader.py  file_watcher.py  functions.py  globals.py  history.py  image_processing.py  image_rotation.py  lazy_initialization.py  lightweight_monitor.py  memory_estimator.py  memory_pool.py  network_cache.py  optimized_algorithms.py  optimized_loading_strategies.py  performance_optimizer.py  preload_manager.py  remote_file_detector.py  remote_file_manager.py  session_manager.py  simple_cache.py  smart_memory_manager.py  smb_optimizer.py  threading.py  unified_cache_manager.py  unified_interfaces.py
plookingII/db/: connection.py
plookingII/logo/: PlookingII.icns
plookingII/monitor/: __init__.py  telemetry.py  unified_monitor.py
plookingII/services/: __init__.py  background_task_manager.py  history_manager.py  image_loader_service.py  recent.py
plookingII/ui/: context_menu_manager.py  menu_builder.py  views.py  window.py
plookingII/utils/: __init__.py  error_utils.py  file_utils.py  macos_cleanup.py  path_utils.py  robust_error_handler.py  validation_utils.py
scripts/: bump_version.py
tests/: __init__.py  conftest.py  test_architecture.py  test_bidirectional_cache.py  test_code_quality.py  test_controllers_integration.py  test_core_modules.py  test_core_new_features.py  test_optimized_loading_strategies.py  test_simple_coverage.py  test_unified_cache.py  test_unified_cache_manager.py  test_unified_monitor.py  test_utils_correct.py  test_utils_modules.py  test_utils_simple.py
tests/integration/: __init__.py  test_basic_integration.py
tests/ui_extended/: performance_benchmark.py  test_core_more_coverage.py  test_history_edges.py  test_nav_and_ops_coverage.py  test_nav_keys.py  test_nav_keys_extended.py  (+6 more)
tools/: README_TOOLS.md  analyze_image_performance.py  architecture_guard.py  benchmark_images.py  cache_optimizer.py  cleanup_all_selection_folders.py  fallback_metrics_cli.py  generate_reports.py  golden_regression.py  memory_optimizer.py  package_release.py  release_validator.py  remote_file_optimizer.py  v1_3_0_benchmark.py  version_updater.py
(+112 files in other folders)
