[project]
name = "plookingII"
dynamic = ["version"]
description = "macOS native image viewer with high performance"
authors = [{name = "PlookingII Team"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["build", "dist", "archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "PL", "TRY", "N", "C90"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201", "RUF001", "RUF002", "RUF003"]
"plookingII/utils/macos_cleanup.py" = ["TID252", "G004", "RUF001", "RUF002", "RUF003"]

# Pylint rules
[tool.ruff.lint.pylint]
max-args = 8              # 函数最多8个参数
max-branches = 15         # 函数最多15个分支
max-returns = 8           # 函数最多8个return语句
max-statements = 60       # 函数最多60条语句

# McCabe complexity
[tool.ruff.lint.mccabe]
max-complexity = 15       # 圈复杂度阈值（15是合理的中等严格度）

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.setuptools.dynamic]
version = {attr = "plookingII.__version__.__version__"}

[tool.semantic_release]
version_variables = ["plookingII/__version__.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "python tools/package_release.py --build"
changelog_file = "CHANGELOG.md"
changelog_placeholder = "<!--next-version-->"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.remote]
type = "github"
token = {env = "GITHUB_TOKEN"}

[tool.semantic_release.publish]
dist_glob_patterns = ["release/*.zip", "release/*.sha256"]
upload_to_vcs_release = true

# ============================================================================
# 测试配置
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: 慢速测试(超过5秒的测试)",
    "unit: 单元测试",
    "integration: 集成测试",
    "ui: UI相关测试",
    "network: 需要网络的测试",
    "db: 数据库相关测试",
    "external: 需要外部依赖的测试",
    "concurrent: 并发测试",
    "flaky: 可能不稳定的测试",
    "smoke: 冒烟测试",
    "critical: 关键路径测试",
    "skip_ci: CI环境跳过的测试",
]

[tool.coverage.run]
branch = true
source = ["plookingII"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/__main__.py",
    "*/logo/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abstract",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".git", "__pycache__"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*"]

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["plookingII"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | build
  | \.git
  | __pycache__
)/
'''
